<resources>
    <string name="app_name">SoundRecorder</string>
    <string name="savethisrecord">Save This Recording ?</string>
    <string name="savingrecord">Saving Record</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="options">Options</string>
    <string name="share">Share</string>
    <string name="renamerecord">Rename Record</string>
    <string name="backoption">You Must Stop Player To Go Back</string>
    <string name="deleteconfirmation">"Delete Confirmation"</string>
    <string name="recording">Recording...</string>
    <string name="androidpause">Your Android Version Not Support Pause Feature</string>
    <string name="savedrecord">Record Saved to : </string>
    <string name="recorderplaying">Still Recording In The Background</string>
    <string name="playerplaying">Record Still Playing In The Background</string>
    <string name="permissingranted">Permission Granted</string>
    <string name="permissindenied">Permission Denied</string>
    <string name="failedstartrec">Failed To Start Recording</string>
    <string name="failedsaverec">Failed To Save Recording</string>
    <string name="failedplayrec">Failed To Play Record</string>
    <string name="itemdeleted">Item Deleted</string>
    <string name="itemupdated">Item Updated</string>
    <string name="speakermode">Speaker Mode Activated</string>
    <string name="earpiecemode">EarPiece Mode Activated</string>
    <string name="deleteconf">Delete This Item?</string>
    <string name="imagename">mic</string>
    <string name="button">Save</string>
    <string name="button4">Back</string>
    <string name="button5">Delete</string>
    <string name="edittextname">File Name</string>
    <string name="button8">Rename</string>
    <string name="buttondone">Submit</string>
    <string name="title_activity_main3">Main3Activity</string>
    <string name="contentdescription">Image</string>
    <string name="stop">stop</string>
    <string name="speaker">speaker</string>
</resources>
